syntax = "proto3";

option csharp_namespace = "Protos.LiveUpdatesSubscription";

package liveupdatessubscription;

import "Entities/LiveUpdatesSubscription/LiveUpdatesSubscriptionRequest.proto";
import "Entities/LiveUpdatesSubscription/LiveUpdatesSubscriptionItem.proto";

service LiveUpdatesSubscription {
  rpc subscribeForUpdates (liveupdatessubscription.LiveUpdatesSubscriptionRequest) returns (stream liveupdatessubscription.LiveUpdatesSubscriptionItem);
}
