syntax = "proto3";

option csharp_namespace = "Protos.UserProfiles";

package userprofiles;

import "Entities/UserProfiles/CreateUserProfileRequest.proto";
import "Entities/UserProfiles/CreateUserProfileResponse.proto";
import "Entities/UserProfiles/GetUserProfileRequest.proto";
import "Entities/UserProfiles/GetUserProfileResponse.proto";
import "Entities/UserProfiles/UpdateUserProfileRequest.proto";
import "Entities/UserProfiles/UpdateUserProfileResponse.proto";

service UserProfiles {
  rpc registerUserProfile (createuserprofile.CreateUserProfileRequest) returns (createuserprofile.CreateUserProfileResponse);
  rpc getUserProfile (getuserprofile.GetUserProfileRequest) returns (getuserprofile.GetUserProfileResponse);
  rpc updateUserProfile (updateuserprofile.UpdateUserProfileRequest) returns (updateuserprofile.UpdateUserProfileResponse);
}
